Use less restrictive types for TriangulationUtil parameters